--- a/landing-page-saas/package.json
+++ b/landing-page-saas/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@auth/supabase-adapter": "^1.7.4",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.47.10",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
