--- a/landing-page-saas/package.json
+++ b/landing-page-saas/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@auth/supabase-adapter": "^1.7.4",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
