--- a/landing-page-saas/package.json
+++ b/landing-page-saas/package.json
@@ -29,6 +29,7 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "supabase": "^2.6.8",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
