--- a/landing-page-saas/package.json
+++ b/landing-page-saas/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
