--- a/landing-page-saas/package.json
+++ b/landing-page-saas/package.json
@@ -28,7 +28,7 @@
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
-    "next": "15.1.3",
+    "next": "^15.1.6",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
